--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer section-padding--half bg-alpha">
   <div class="footer__container grid">
-    <p>&copy;{{ site.time | date: "%Y" }} {{ site.title }}. Coded With Code by Thomas Vaeth.</p>
+    <p>&copy;{{ site.time | date: "%Y" }} {{ site.title }}. Coded With Code by Yuehua.</p>
     {% if site.email or site.social %}
       <ul class="footer__social">
         {% if site.email %}
