--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,9 +6,9 @@
   </a>
   <nav>
     <ul class="header__list">
-      <li><a data-scroll href="/#about">About</a></li>
-      <li><a data-scroll href="/#portfolio">Portfolio</a></li>
-      <li><a data-scroll href="/#blog">Blog</a></li>
+      <li><a data-scroll href="/#about">关于</a></li>
+      <li><a data-scroll href="/#portfolio">纪念</a></li>
+      <li><a data-scroll href="/#blog">博客</a></li>
     </ul>
   </nav>
 </header>
