--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <a href="/">
     <figure class="header__img">
-      <img src="/assets/images/love.jpg" alt="Love Logo"/>
+      <img src="/assets/images/logo.png" alt="Love Logo"/>
     </figure>
   </a>
   <nav>
