--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
   </a>
   <nav>
     <ul class="header__list">
-      <li><a data-scroll href="/#blog">博客</a></li>
+      <li><a data-scroll href="/#blog">记录</a></li>
       <li><a data-scroll href="/#portfolio">瞬间</a></li>
       <li><a data-scroll href="/#about">关于</a></li>
     </ul>
